@@ -989,64 +989,65 @@ BEGIN
                     WS_BORDER,0,0,335,13
 END
 
-IDD_SEQUENCER DIALOGEX 0, 0, 70, 306
+IDD_SEQUENCER DIALOGEX 0, 0, 70, 348
 STYLE WS_CHILD
 EXSTYLE WS_EX_STATICEDGE
 FONT 8, "Tahoma"
 BEGIN
     CONTROL         "Follow song",IDC_FOLLOW,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,5,202,62,8
-    LISTBOX         IDC_SEQLIST,4,5,36,140,LBS_SORT | LBS_EXTENDEDSEL | 
+                    WS_TABSTOP,5,218,62,8
+    LISTBOX         IDC_SEQLIST,4,5,36,157,LBS_SORT | LBS_EXTENDEDSEL | 
                     WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "+",IDC_INCSHORT,43,5,23,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
     PUSHBUTTON      "-",IDC_DECSHORT,43,21,23,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    PUSHBUTTON      "Ins",IDC_SEQINS,43,85,23,12,0,WS_EX_STATICEDGE
-    PUSHBUTTON      "Del",IDC_SEQDEL,43,101,23,12,0,WS_EX_STATICEDGE
-    PUSHBUTTON      "Clear",IDC_SEQCLR,43,117,23,12,0,WS_EX_STATICEDGE
-    LTEXT           "Po.",IDC_STATIC,4,150,9,8,SS_CENTERIMAGE
-    PUSHBUTTON      "<",IDC_DECPOS2,16,148,16,12,BS_BITMAP | BS_CENTER | 
+    PUSHBUTTON      "Ins",IDC_SEQINS,43,101,23,12,0,WS_EX_STATICEDGE
+    PUSHBUTTON      "Del",IDC_SEQDEL,43,117,23,12,0,WS_EX_STATICEDGE
+    PUSHBUTTON      "Clear",IDC_SEQCLR,43,133,23,12,0,WS_EX_STATICEDGE
+    LTEXT           "Po.",IDC_STATIC,4,166,9,8,SS_CENTERIMAGE
+    PUSHBUTTON      "<",IDC_DECPOS2,16,164,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    CTEXT           "000",IDC_SEQ1,32,148,16,12,SS_CENTERIMAGE,
+    CTEXT           "000",IDC_SEQ1,32,164,16,12,SS_CENTERIMAGE,
                     WS_EX_STATICEDGE
-    PUSHBUTTON      ">",IDC_INCPOS2,50,148,16,12,BS_BITMAP | BS_CENTER | 
+    PUSHBUTTON      ">",IDC_INCPOS2,50,164,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    LTEXT           "Pa.",IDC_STATIC,4,163,9,8,SS_CENTERIMAGE
-    PUSHBUTTON      "<",IDC_DECPAT2,16,161,16,12,BS_BITMAP | BS_CENTER | 
+    LTEXT           "Pa.",IDC_STATIC,4,179,9,8,SS_CENTERIMAGE
+    PUSHBUTTON      "<",IDC_DECPAT2,16,177,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    CTEXT           "000",IDC_SEQ2,32,161,16,12,SS_CENTERIMAGE,
+    CTEXT           "000",IDC_SEQ2,32,177,16,12,SS_CENTERIMAGE,
                     WS_EX_STATICEDGE
-    PUSHBUTTON      ">",IDC_INCPAT2,50,161,16,12,BS_BITMAP | BS_CENTER | 
+    PUSHBUTTON      ">",IDC_INCPAT2,50,177,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    LTEXT           "Ln.",IDC_STATIC,4,176,9,8,SS_CENTERIMAGE
-    PUSHBUTTON      "<",IDC_DECLEN,16,174,16,12,BS_BITMAP | BS_CENTER | 
+    LTEXT           "Ln.",IDC_STATIC,4,192,9,8,SS_CENTERIMAGE
+    PUSHBUTTON      "<",IDC_DECLEN,16,190,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    CTEXT           "000",IDC_SEQ3,32,174,16,12,SS_CENTERIMAGE,
+    CTEXT           "000",IDC_SEQ3,32,190,16,12,SS_CENTERIMAGE,
                     WS_EX_STATICEDGE
-    PUSHBUTTON      ">",IDC_INCLEN,50,174,16,12,BS_BITMAP | BS_CENTER | 
+    PUSHBUTTON      ">",IDC_INCLEN,50,190,16,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
-    LTEXT           "Length",IDC_STATIC,4,189,24,12
-    CTEXT           "00:00",IDC_LENGTH,35,188,31,12,SS_CENTERIMAGE | NOT 
+    LTEXT           "Length",IDC_STATIC,4,205,24,12
+    CTEXT           "00:00",IDC_LENGTH,35,204,31,12,SS_CENTERIMAGE | NOT 
                     WS_GROUP,WS_EX_STATICEDGE
     CONTROL         "Multichannel Audition",IDC_MULTICHANNEL_AUDITION,"Button",
-                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,212,62,15
+                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,228,62,15
     CONTROL         "Wrap Around",IDC_WRAP,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,5,263,56,11
+                    WS_TABSTOP,5,279,56,11
     CONTROL         "Center Cursor",IDC_CENTERCURSOR,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,5,274,62,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,5,290,62,10
     CONTROL         "Cursor Always Down",IDC_CURSORDOWN,"Button",
-                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,284,60,16
+                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,300,60,16
     CONTROL         "Record NoteOffs",IDC_RECORD_NOTEOFF,"Button",
-                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,229,60,15
+                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,245,60,15
     PUSHBUTTON      "++",IDC_INCLONG,43,37,23,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
     PUSHBUTTON      "-",IDC_DECLONG,43,53,23,12,BS_BITMAP | BS_CENTER | 
                     BS_VCENTER,WS_EX_STATICEDGE
     PUSHBUTTON      "New",IDC_SEQNEW,43,69,23,12,0,WS_EX_STATICEDGE
-    PUSHBUTTON      "Sort",IDC_SEQSRT,43,133,23,12,0,WS_EX_STATICEDGE
+    PUSHBUTTON      "Sort",IDC_SEQSRT,43,149,23,12,0,WS_EX_STATICEDGE
     CONTROL         "Record Tweaks",IDC_RECORD_TWEAKS,"Button",
-                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,247,60,15
+                    BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,5,263,60,15
+    PUSHBUTTON      "Xerox",IDC_SEQDUPLICATE,43,85,23,12,0,WS_EX_STATICEDGE
 END
 
 IDD_DSOUNDCONFIG DIALOGEX 0, 0, 277, 103
@@ -1385,7 +1386,7 @@ BEGIN
         LEFTMARGIN, 4
         RIGHTMARGIN, 66
         TOPMARGIN, 7
-        BOTTOMMARGIN, 304
+        BOTTOMMARGIN, 346
     END
 
     IDD_DSOUNDCONFIG, DIALOG
